@@ -1,5 +1,13 @@
 2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-typify.c (pkl_typify1_ps_map): Improve diagnostics.
+	* testsuite/poke.pkl/map-diag-6.pk: New test.
+	* testsuite/poke.pkl/map-ios-diag-1.pk: Update expected error.
+	* testsuite/poke.pkl/map-ios-diag-2.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
+2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Improve
 	diagnostics.
 	* testsuite/poke.pkl/int-struct-type-diag-16.pk: New test.
